# evm-rs-emulator

./: .env  .env.example  .gitignore  .rusty-hook.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile.toml  README.md  README_CRATE.md  clippy.toml  install  rustfmt.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: CI.yml
src/: lib.rs  main.rs
src/core_module/: errors.rs  interpreter.rs  memory.rs  mod.rs  runner.rs  stack.rs  state.rs  storage.rs
src/core_module/op_codes/: bitwise.rs  comparison.rs  environment.rs  flow.rs  log.rs  memory.rs  mod.rs  storage.rs  system.rs
src/core_module/op_codes/arithmetic/: mod.rs  signed.rs  unsigned.rs
src/core_module/op_codes/math/: mod.rs  signed.rs  unsigned.rs
src/core_module/op_codes/stack/: dup.rs  mod.rs  pop.rs  push.rs  swap.rs
src/core_module/utils/: bytes.rs  bytes32.rs  constants.rs  debug.rs  environment.rs  errors.rs  mod.rs
