[package]
name = "bytecode-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
colored = "2.0.4"
ethers = "2.0.7"
mem_storage = "0.1.1"
primitive-types = "0.12.1"
hex = "0.4"
rusty-hook = "0.11.2"

[package.metadata.commands]
coverage = "cargo test && export LLVM_PROFILE_FILE='llvm/evm-rs-emulator-%p-%m.profraw' && grcov . -s . --binary-path ./target/debug/ -t html --branch --ignore-not-existing -o ./coverage/ && google-chrome ./coverage/index.html && cp ./coverage/html/badges/flat.svg ./coverage/badges/"
