[package]
name = "evm-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
colored = "2.0.4"
ethers = "2.0.7"
mem_storage = "0.1.1"
primitive-types = "0.12.1"
hex = "0.4"
rusty-hook = "0.11.2"